# Company_Profiler

./: README.md  pyproject.toml
src/company_profiler/: crew.py  main.py
src/company_profiler/config/: agents.yaml  tasks.yaml
